force-app/main/default/objects/RTL_Upload_Campaign_Member_Batch__c/RTL_Upload_Campaign_Member_Batch__c.object-meta.xml
<CustomObject>
    <label>Upload Campaign Member Batch</label>
    <nameField>
        <displayFormat>UCMB-{000000}</displayFormat>
        <label>Upload Campaign Member Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTL Upload Campaign Member Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>