force-app/main/default/objects/RTL_Upload_Campaign_Member_Batch__c/fields/RTL_End_at_Row_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_End_at_Row_No__c</fullName>
    <label>RTL End at Row No.</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>