force-app/main/default/objects/RTL_Upload_Campaign_Member_Batch__c/fields/RTL_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Status__c</fullName>
    <label>RTL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>